# cell

CanineVentricularCellBeta/: CMakeLists.txt  RG.txt  beta.h  elphys.cpp  funsignalling.cpp  main.cpp  script.sh  script.sh~  settings.cpp  settings.h
integration/: CMakeLists.txt  beta.h  cabuf.c  caconc.c  elphys.h  funsignalling.cpp  funsignalling.h  ibg.c  ical.c  iclca.c  iki.c  ikr.c  iks.c  ina.c  inak.c  incx.c  ipk.c  ito.c  main.c  sa.h  settings.cpp  settings.h  signalling.cpp  signalling.h
modelEquations/: CMakeLists.txt  buffers.txt  compilation.txt  currents.txt  ikp.c  inak.c  js.txt  main  main.c  naconc.c  sa.h  script.sh  script.sh~  srflux.c  states.txt
